--- a/ASP - Lab 1/ASP - Lab 1/ASP - Lab 1.csproj
+++ b/ASP - Lab 1/ASP - Lab 1/ASP - Lab 1.csproj
@@ -61,29 +61,29 @@
     <Content Include="App_Data\MainDB_log.ldf">
       <DependentUpon>MainDB.mdf</DependentUpon>
     </Content>
-    <Content Include="EditUsers.aspx" />
+    <Content Include="EditUser.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="CreateUser.aspx" />
+    <Content Include="Inscription.aspx" />
     <Content Include="ListUsers.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditUsers.aspx.cs">
-      <DependentUpon>EditUsers.aspx</DependentUpon>
+    <Compile Include="EditUser.aspx.cs">
+      <DependentUpon>EditUser.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="EditUsers.aspx.designer.cs">
-      <DependentUpon>EditUsers.aspx</DependentUpon>
+    <Compile Include="EditUser.aspx.designer.cs">
+      <DependentUpon>EditUser.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="CreateUser.aspx.cs">
-      <DependentUpon>CreateUser.aspx</DependentUpon>
+    <Compile Include="Inscription.aspx.cs">
+      <DependentUpon>Inscription.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="CreateUser.aspx.designer.cs">
-      <DependentUpon>CreateUser.aspx</DependentUpon>
+    <Compile Include="Inscription.aspx.designer.cs">
+      <DependentUpon>Inscription.aspx</DependentUpon>
     </Compile>
     <Compile Include="ListUsers.aspx.cs">
       <DependentUpon>ListUsers.aspx</DependentUpon>
